add get all weddings endpoint
